fix: openapi schemas + openapi integration test + helm
